--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@ title: お問い合わせ
       <h1 class="section-title">お問い合わせ</h1>
       <p>転職相談・採用支援・衛星データ活用・アプリについてなど、まずはお気軽にご連絡ください。<br>通常2営業日以内にご返信いたします。</p>
     </div>
-    <form class="contact-form reveal" action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+    <form class="contact-form reveal" action="https://formspree.io/f/xojnlgnn" method="POST">
       <div class="form-group">
         <label for="name">お名前</label>
         <input type="text" id="name" name="name" required placeholder="山田 太郎">
