add company field

--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,10 @@ title: お問い合わせ
         <input type="text" id="name" name="name" required placeholder="山田 太郎">
       </div>
       <div class="form-group">
+        <label for="company">会社名（任意）</label>
+        <input type="text" id="company" name="company" placeholder="株式会社〇〇">
+      </div>
+      <div class="form-group">
         <label for="email">メールアドレス</label>
         <input type="email" id="email" name="email" required placeholder="example@email.com">
       </div>
