update company info

--- a/about.html
+++ b/about.html
@@ -21,10 +21,10 @@ title: 会社概要
       <div class="about-label">会社概要</div>
       <div class="about-text">
         <table class="company-table">
-          <tr><td>会社名</td><td>株式会社T-Graph</td></tr>
-          <tr><td>設立</td><td>—</td></tr>
-          <tr><td>所在地</td><td>—</td></tr>
-          <tr><td>代表者</td><td>—</td></tr>
+          <tr><td>会社名</td><td>株式会社Tsumugi（T-Graphに商号変更予定）</td></tr>
+          <tr><td>設立</td><td>2025年1月</td></tr>
+          <tr><td>所在地</td><td>〒101-0031 東京都千代田区東神田3丁目4-12</td></tr>
+          <tr><td>代表者</td><td>屋野天祥</td></tr>
           <tr><td>事業内容</td><td>人材紹介業・衛星データ利活用コンサルティング・ビジネスアプリケーション開発</td></tr>
           <tr><td>URL</td><td>https://tgraph.jp</td></tr>
         </table>
